# SSU_CPP_Project

./: CMakeLists.txt  addemployeedialog.cpp  addemployeedialog.h  addemployeedialog.ui  calendarwidget.cpp  calendarwidget.h  calendarwidget.ui  datamanager.cpp  datamanager.h  employee.cpp  employee.h  employeepanelwidget.cpp  employeepanelwidget.h  employeepanelwidget.ui  infodisplaywidget.cpp  infodisplaywidget.h  inputworkhoursdialog.cpp  inputworkhoursdialog.h  inputworkhoursdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  worklog.cpp  worklog.h
